--- a/styles/components/_adminJournal-section.scss
+++ b/styles/components/_adminJournal-section.scss
@@ -18,4 +18,11 @@
     width: 100%;
     height: 85%;
     display: flex;
+
+    .imageFrame{
+        width: 30%;
+        height: 100%;
+        position: relative;
+    }
+    
 }
