--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -49,5 +49,6 @@
 @import '../components/adminJournal-section';
 @import '../components/admin-id';
 @import '../components/admin-journalBlock';
+@import '../components/admin-search';
 // utilities (margin, padding, opacity, etc)
 // @import 'utilities';
