--- a/styles/components/_userHotelRoom-section.scss
+++ b/styles/components/_userHotelRoom-section.scss
@@ -73,5 +73,14 @@
             background-color: white;
             border-radius: $base-border-radius;
         }
+
+        .addLabel{
+            display: inline;
+            margin-bottom: 2rem;
+        }
+        .addLabel_hide{
+            display: none;
+            height: 0;
+        }
     }
 }
