--- a/styles/layout/_component-style.scss
+++ b/styles/layout/_component-style.scss
@@ -65,4 +65,7 @@
     border-radius: 8px;
     font-weight: bolder;
     font-size: $base-font-size;
+    * {
+        font-size: $base-font-size;
+    }
 }
