--- a/styles/components/_admin-search.scss
+++ b/styles/components/_admin-search.scss
@@ -1,7 +1,7 @@
 .searchContainer{
     height: 100%;
-    width: 40%;
-    padding-right: $base-padding * 4;
+    width: 45%;
+    padding: $base-padding * 4;
     padding-top: $base-padding * 4;
     padding-bottom: $base-padding * 4;
 
@@ -30,7 +30,7 @@
 
             .detailP{
                 height: 50%;
-                width: 30%;
+                width: 25%;
                 font-size: 1.25rem;
             }
 
@@ -44,7 +44,7 @@
                 background-color: white;
                 border-radius: 10px;
                 height: 50%;
-                width: 50%;
+                width: 40%;
                 font-size: 1.25rem;
                 margin-left: 2%;
                 margin-bottom: 1.75%;
