--- a/styles/components/_adminJournal-section.scss
+++ b/styles/components/_adminJournal-section.scss
@@ -12,15 +12,11 @@
     @include xl{
         background-color: #d3d3d3;
     }
-        
-    position: absolute;
-    top: 15%;
-    width: 100%;
-    height: 85%;
-    display: flex;
+    
+    @include bottom-block;
 
     .imageFrame{
-        width: 30%;
+        width: 27.5%;
         height: 100%;
         position: relative;
     }
