--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -3047,6 +3047,7 @@
 .adminJournalSection_SettingContainer {
   position: absolute;
   top: 15%;
+  right: 0%;
   width: 100%;
   height: 85%;
   display: flex;
@@ -3072,15 +3073,16 @@
   }
 }
 .adminJournalSection_SettingContainer .imageFrame {
-  width: 30%;
+  width: 27.5%;
   height: 100%;
   position: relative;
 }
 
 .idContainer {
   height: 100%;
-  width: 30%;
-  padding: 3rem;
+  width: 27.5%;
+  padding-left: 3rem;
+  padding-top: 3rem;
   padding-bottom: 6rem;
 }
 .idContainer .idBlock {
@@ -3088,7 +3090,7 @@
   height: 100%;
   width: 100%;
   border-radius: 30px;
-  padding: 1.5rem;
+  padding: 0.75rem;
 }
 .idContainer .idBlock .idTitle {
   height: 10%;
@@ -3144,7 +3146,7 @@
 
 .jbContainer {
   height: 100%;
-  width: 70%;
+  width: 72.5%;
   padding: 3rem;
 }
 .jbContainer .jbTitle {
@@ -3248,8 +3250,8 @@
 
 .searchContainer {
   height: 100%;
-  width: 40%;
-  padding-right: 3rem;
+  width: 45%;
+  padding: 3rem;
   padding-top: 3rem;
   padding-bottom: 3rem;
   display: flex;
@@ -3276,7 +3278,7 @@
 }
 .searchContainer .formBlock .idDetail .detailP {
   height: 50%;
-  width: 30%;
+  width: 25%;
   font-size: 1.25rem;
 }
 .searchContainer .formBlock .idDetail .or {
@@ -3288,7 +3290,7 @@
   background-color: white;
   border-radius: 10px;
   height: 50%;
-  width: 50%;
+  width: 40%;
   font-size: 1.25rem;
   margin-left: 2%;
   margin-bottom: 1.75%;
@@ -3306,4 +3308,92 @@
   height: 50%;
   width: 50%;
   border-radius: 20px;
+}
+
+.SearchHouseResultContainer {
+  height: 100%;
+  width: 90%;
+  padding-right: 3rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+.SearchHouseResultContainer .rbTitle {
+  height: 10%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  font-size: 2rem;
+  font-weight: bold;
+}
+.SearchHouseResultContainer .resultBlock {
+  height: 90%;
+  width: 100%;
+}
+.SearchHouseResultContainer .resultBlock .blockSpace {
+  height: 5%;
+  width: 100%;
+}
+.SearchHouseResultContainer .resultBlock .rbDetailContainer {
+  height: 45%;
+  width: 100%;
+  background-color: white;
+  border-radius: 30px;
+  padding: 1.5rem;
+  display: flex;
+  margin-bottom: 3.5%;
+}
+.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerLeft {
+  height: 100%;
+  width: 30%;
+  display: flex;
+  align-items: center;
+}
+.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerLeft .jbImageContainer {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerLeft .jbImageContainer .imageFrame {
+  height: 175px;
+  width: 175px;
+  border-radius: 999em;
+  background-color: #d3d3d3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerRight {
+  height: 100%;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+}
+.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerRight .title {
+  font-size: 2rem;
+  font-weight: bold;
+  height: 25%;
+}
+.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerRight .middleInfo {
+  padding-top: 1%;
+  height: 20%;
+  font-size: 1.25rem;
+}
+.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerRight .space {
+  height: 10%;
+}
+.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerRight .rowContainer {
+  display: flex;
+  align-items: center;
+  height: 25%;
+}
+.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerRight .rowContainer .content {
+  font-size: 1.25rem;
+  margin-right: 13%;
+}
+.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerRight .rowContainer .bigcontent {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-left: 13%;
 }/*# sourceMappingURL=home.module.css.map */
