--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -51,5 +51,6 @@
 @import '../components/admin-id';
 @import '../components/admin-journalBlock';
 @import '../components/admin-search';
+@import '../components/admin-searchHouseResult';
 // utilities (margin, padding, opacity, etc)
 // @import 'utilities';
