--- a/styles/components/_admin-searchResult.scss
+++ b/styles/components/_admin-searchResult.scss
@@ -1,4 +1,4 @@
-.SearchHouseResultContainer{
+.SearchResultContainer{
     height: 100%;
     width: 90%;
     padding-right: $base-padding * 4;
@@ -45,10 +45,20 @@
                     align-items: center;
                     justify-content: center;
                     
-                    .imageFrame{
+                    .userImageFrame{
                         height: 175px;
                         width: 175px;
                         border-radius: 999em;
+                        background-color: #d3d3d3;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
+
+                    .houseImageFrame{
+                        height: 175px;
+                        width: 225px;
+                        border-radius: 25px;
                         background-color: #d3d3d3;
                         display: flex;
                         align-items: center;
