--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -3310,14 +3310,14 @@
   border-radius: 20px;
 }
 
-.SearchHouseResultContainer {
+.SearchResultContainer {
   height: 100%;
   width: 90%;
   padding-right: 3rem;
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
-.SearchHouseResultContainer .rbTitle {
+.SearchResultContainer .rbTitle {
   height: 10%;
   width: 100%;
   display: flex;
@@ -3325,15 +3325,15 @@
   font-size: 2rem;
   font-weight: bold;
 }
-.SearchHouseResultContainer .resultBlock {
+.SearchResultContainer .resultBlock {
   height: 90%;
   width: 100%;
 }
-.SearchHouseResultContainer .resultBlock .blockSpace {
+.SearchResultContainer .resultBlock .blockSpace {
   height: 5%;
   width: 100%;
 }
-.SearchHouseResultContainer .resultBlock .rbDetailContainer {
+.SearchResultContainer .resultBlock .rbDetailContainer {
   height: 45%;
   width: 100%;
   background-color: white;
@@ -3342,20 +3342,20 @@
   display: flex;
   margin-bottom: 3.5%;
 }
-.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerLeft {
+.SearchResultContainer .resultBlock .rbDetailContainer .containerLeft {
   height: 100%;
   width: 30%;
   display: flex;
   align-items: center;
 }
-.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerLeft .jbImageContainer {
+.SearchResultContainer .resultBlock .rbDetailContainer .containerLeft .jbImageContainer {
   height: 100%;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerLeft .jbImageContainer .imageFrame {
+.SearchResultContainer .resultBlock .rbDetailContainer .containerLeft .jbImageContainer .userImageFrame {
   height: 175px;
   width: 175px;
   border-radius: 999em;
@@ -3364,35 +3364,44 @@
   align-items: center;
   justify-content: center;
 }
-.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerRight {
+.SearchResultContainer .resultBlock .rbDetailContainer .containerLeft .jbImageContainer .houseImageFrame {
+  height: 175px;
+  width: 225px;
+  border-radius: 25px;
+  background-color: #d3d3d3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.SearchResultContainer .resultBlock .rbDetailContainer .containerRight {
   height: 100%;
   width: 70%;
   display: flex;
   flex-direction: column;
 }
-.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerRight .title {
+.SearchResultContainer .resultBlock .rbDetailContainer .containerRight .title {
   font-size: 2rem;
   font-weight: bold;
   height: 25%;
 }
-.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerRight .middleInfo {
+.SearchResultContainer .resultBlock .rbDetailContainer .containerRight .middleInfo {
   padding-top: 1%;
   height: 20%;
   font-size: 1.25rem;
 }
-.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerRight .space {
+.SearchResultContainer .resultBlock .rbDetailContainer .containerRight .space {
   height: 10%;
 }
-.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerRight .rowContainer {
+.SearchResultContainer .resultBlock .rbDetailContainer .containerRight .rowContainer {
   display: flex;
   align-items: center;
   height: 25%;
 }
-.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerRight .rowContainer .content {
+.SearchResultContainer .resultBlock .rbDetailContainer .containerRight .rowContainer .content {
   font-size: 1.25rem;
   margin-right: 13%;
 }
-.SearchHouseResultContainer .resultBlock .rbDetailContainer .containerRight .rowContainer .bigcontent {
+.SearchResultContainer .resultBlock .rbDetailContainer .containerRight .rowContainer .bigcontent {
   font-size: 2rem;
   font-weight: bold;
   margin-left: 13%;
