--- a/styles/components/_userhotelindex-result.scss
+++ b/styles/components/_userhotelindex-result.scss
@@ -1,5 +1,4 @@
-
-.searchResultContainer{
+.userHotelIndexResultContainer{
     //display
     display: flex;
     padding: $base-padding * 1.2;
@@ -26,10 +25,11 @@
         width: 80%;
     }
     @include xl {
-        width: 75%;
+        width: 90%;
     }
     .img{
         width: 35%; 
+        height: 100%;
         border-radius: $base-border-radius;
         object-fit: cover;
     }
@@ -39,7 +39,7 @@
         padding: $base-padding * 0.8;
         padding-left: $base-padding * 2;
         padding-bottom: 0;
-        width: 100%;
+        width: 300%;
 
         display: flex;
         flex-direction: column;
@@ -72,6 +72,17 @@
                 flex-direction: row;
                 align-items: flex-end;
             }
+        }
+    }
+
+    .imagebutton{
+        height: 100%;
+        width: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .icon{
+            font-size: 50px;
         }
     }
 }
