hotel info fetch

--- a/styles/components/_hotelInfo-room.scss
+++ b/styles/components/_hotelInfo-room.scss
@@ -67,6 +67,11 @@
                 margin-bottom: 0;
                 margin-left: 0;
             }
+
+            .intro, .bed {
+                max-width: 60%;
+                margin-top: $base-margin;
+            }
             
         }
     }
