--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -53,5 +53,6 @@
 @import '../components/admin-journalBlock';
 @import '../components/admin-search';
 @import '../components/admin-searchResult';
+@import '../components/admin-userDetail';
 // utilities (margin, padding, opacity, etc)
 // @import 'utilities';
