--- a/styles/components/_admin-userDetail.scss
+++ b/styles/components/_admin-userDetail.scss
@@ -30,10 +30,19 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    .imageFrame{
+                    .imageUserFrame{
                         height: 150px;
                         width: 150px;
                         border-radius: 999em;
+                        background-color: #d3d3d3;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
+                    .imageHouseFrame{
+                        height: 150px;
+                        width: 150px;
+                        border-radius: 20px;
                         background-color: #d3d3d3;
                         display: flex;
                         align-items: center;
