--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -54,5 +54,6 @@
 @import '../components/admin-search';
 @import '../components/admin-searchResult';
 @import '../components/admin-userDetail';
+@import '../components/admin-userAccess';
 // utilities (margin, padding, opacity, etc)
 // @import 'utilities';
