--- a/styles/components/_admin-searchResult.scss
+++ b/styles/components/_admin-searchResult.scss
@@ -72,13 +72,24 @@
                 width: 70%;
                 display: flex;
                 flex-direction: column;
-
-                .title{
-                    font-size: 2rem;
-                    font-weight: bold;
+                
+                .flexContainer{
                     height: 25%;
+                    display: flex;
+                    .title{
+                        font-size: 2rem;
+                        font-weight: bold;
+                    }
+                    .deleteButton{
+                        border-radius: 10px;
+                        padding: $base-padding;
+                        font-size: 1rem;
+                        font-weight: bold;
+                        margin-left: 20%;
+                    }
+    
                 }
-
+                
                 .middleInfo{
                     padding-top: 1%;
                     height: 20%;
