--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -1138,6 +1138,127 @@
   margin: 1rem;
 }
 
+.HotelinfoDataContainer {
+  padding: 3rem;
+  height: 100%;
+  width: 100%;
+}
+.HotelinfoDataContainer .title {
+  font-size: 2.5rem;
+  font-weight: bold;
+  height: 10%;
+}
+.HotelinfoDataContainer .blockContainer1 {
+  padding: 1.5rem;
+  height: 90%;
+  display: flex;
+  justify-content: center;
+}
+.HotelinfoDataContainer .blockContainer1 .personalInfoBlock {
+  width: 90%;
+  height: 100%;
+  background-color: white;
+  border-radius: 30px;
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.HotelinfoDataContainer .blockContainer1 .personalInfoBlock .blockTitle {
+  font-size: 2.25rem;
+  font-weight: bold;
+  height: 16%;
+  display: flex;
+  align-items: center;
+}
+.HotelinfoDataContainer .blockContainer1 .personalInfoBlock .option {
+  display: flex;
+  align-items: center;
+  font-size: 1.5rem;
+  height: 16%;
+}
+.HotelinfoDataContainer .blockContainer1 .personalInfoBlock .fill {
+  height: 16%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.HotelinfoDataContainer .blockContainer1 .personalInfoBlock .fill .fillP {
+  height: 50%;
+  width: 7.5%;
+  font-size: 1.5rem;
+}
+.HotelinfoDataContainer .blockContainer1 .personalInfoBlock .fill .fillForm {
+  background-color: #d3d3d3;
+  border-radius: 10px;
+  height: 50%;
+  width: 50%;
+  font-size: 1.5rem;
+  margin-left: 2%;
+  margin-bottom: 10px;
+  padding-left: 0.75rem;
+}
+.HotelinfoDataContainer .blockContainer1 .personalInfoBlock .dateBlock {
+  width: 60%;
+  height: 16%;
+  display: flex;
+}
+.HotelinfoDataContainer .blockContainer1 .personalInfoBlock .dateBlock .space {
+  width: 7.5%;
+}
+.HotelinfoDataContainer .blockContainer1 .personalInfoBlock .dateBlock .filterblock {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.HotelinfoDataContainer .blockContainer1 .personalInfoBlock .dateBlock .filterblock .filterp {
+  height: 50%;
+  font-size: 1.5rem;
+  margin-top: 0.5%;
+  width: 35%;
+  margin-bottom: 5px;
+}
+.HotelinfoDataContainer .blockContainer1 .personalInfoBlock .dateBlock .filterblock .selectform {
+  height: 50%;
+  width: 65%;
+  font-size: 1.5rem;
+  background-color: #d3d3d3;
+  border-radius: 10px;
+  padding-left: 10px;
+  margin-bottom: 10px;
+}
+.HotelinfoDataContainer .blockContainer1 .personalInfoBlock .dateBlock .filterblock .option {
+  font-size: 1.5rem;
+}
+.HotelinfoDataContainer .blockContainer2 {
+  padding: 1.5rem;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+}
+.HotelinfoDataContainer .blockContainer2 .roomConfirmBlock {
+  width: 90%;
+  height: 100%;
+  background-color: white;
+  border-radius: 30px;
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.HotelinfoDataContainer .blockContainer2 .roomConfirmBlock .blockTitle {
+  font-size: 2.25rem;
+  font-weight: bold;
+  height: 33%;
+  display: flex;
+  align-items: center;
+}
+
 .containerhidden {
   visibility: hidden;
   z-index: -3;
