--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -30,6 +30,8 @@
 @import '../components/hotelinfo-title';
 @import '../components/hotelinfo-section';
 
+@import '../components/hotelinfo-dataSection';
+
 
 @import '../components/search-filter';
 @import '../components/search-order';
