--- a/styles/components/_hotelinfo-dataSection.scss
+++ b/styles/components/_hotelinfo-dataSection.scss
@@ -20,10 +20,10 @@
             height: 100%;
             background-color: white;
             border-radius: 30px;
-            padding: $base-padding*4;
+            padding: $base-padding*2;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+
             align-items: center;
 
             .blockTitle{
@@ -80,6 +80,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
+                    font-size: 1.5rem;
     
                     .filterp{
                         height: 50%;
@@ -98,10 +99,6 @@
                         padding-left: 10px; 
                         margin-bottom: 10px;
                     }
-        
-                    .option{
-                        font-size: 1.5rem;
-                    }
                 }
             }   
         }
@@ -109,19 +106,19 @@
 
     .blockContainer2{
         padding: $base-padding*2;
-        height: 50%;
+        height: 60%;
         display: flex;
         justify-content: center;
-        .roomConfirmBlock{
+        .smallBlock{
             width: 90%;
             height: 100%;
             background-color: white;
             border-radius: 30px;
-            padding: $base-padding*4;
+            padding: $base-padding*2;
             display: flex;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
+
             .blockTitle{
                 font-size: 2.25rem;
                 font-weight: bold;
@@ -129,6 +126,56 @@
                 display: flex;
                 align-items: center;
             }
+
+            .filterblock{
+                    width: 100%;
+                    height: 33%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-size: 1.5rem;
+    
+                    .filterp{
+                        height: 50%;
+                        font-size: 1.5rem;
+                        width: 15%;
+                    }
+    
+                    .selectform{
+                        height: 50%;
+                        width: 30%;
+                        font-size: 1.5rem;
+                        background-color: #d3d3d3;
+                        border-radius: 10px;
+                        padding-left: 10px; 
+                        margin-bottom: 20px;
+                    }
+                }
+
+            .specialForm{
+                height: 62.5%;
+                width: 90%;
+                font-size: 1.5rem;
+                background-color: #d3d3d3;
+                border-radius: 10px;
+                padding-left: 20px; 
+            }
+        }
+    }
+
+    .blockContainer3{
+        padding: $base-padding*2;
+        height: 12.5%;
+        width: 100%;
+        display: flex;
+        flex-direction: row-reverse;
+        .confirmButton{
+            font-size: 1.25rem;
+            font-weight: bold;
+            border-radius: 10px;
+            height: 100%;
+            width: 7.5%;
+            margin-right: 5%;
         }
     }
 }
