--- a/styles/components/_hotelinfo-dataSection.scss
+++ b/styles/components/_hotelinfo-dataSection.scss
@@ -151,7 +151,31 @@
                         margin-bottom: 20px;
                     }
                 }
+            
+            .paymentBlock{
+                height: 33%;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                .paymentImage{
+                    width: 10%;
+                }
 
+                .paymentText{
+                    font-size: 1.5rem;
+                    width: 20%;
+                }
+                .paymentButton{
+                    font-size: 1.25rem;
+                    font-weight: bold;
+                    border-radius: 10px;
+                    height: 40%;
+                    width: 10%;
+                    margin-right: 5%;
+                }
+            }
+            
             .specialForm{
                 height: 62.5%;
                 width: 90%;
