--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -44,6 +44,7 @@
 @import '../components/userHotelFeature-section';
 @import '../components/userHotelRoom-section';
 @import '../components/userHotel-notice';
+@import '../components/userhotelindex-section';
 @import '../components/userSellIndex-setting';
 @import '../components/userSellIndex-table';
 @import '../components/userSellOrder-setting';
