--- a/styles/components/_userhotelindex-section.scss
+++ b/styles/components/_userhotelindex-section.scss
@@ -1,25 +1,15 @@
 .userHotelIndexButtonContainer {
-    display: flex;
-    height: 100%;
-    justify-content: space-between;
+    @include bottom-block;
     
-    .bottomleftcontainer{
-        height:100%;
-        position: fixed;
-        top: 15%;
-        display: flex;
-        flex-direction:column;
-        width: 100%;
-    }
-
     .hoteldata {
-        position: absolute;
-        height:100%;
-        width:85%;
-        top: 20%;
-        z-index: -1;
-        right: 0%;
-        z-index: 2;
+        @include right-block;
+        // position: absolute;
+        // // height:100%;
+        // width:85%;
+        // top: 20%;
+        // z-index: -1;
+        // right: 0%;
+        // z-index: 2;
         .infoSearch{
             display: flex;
             width: 100%;
