--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -2262,19 +2262,28 @@
   justify-content: flex-end;
   height: 10%;
 }
-.userHotelRoomContainer .main .newroom {
+.userHotelRoomContainer .main .room {
+  width: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0.75rem;
+  margin: auto;
+  margin-bottom: 1rem;
   background-color: white;
   border-radius: 20px;
+  border: #EEEEEE solid 1px;
 }
-.userHotelRoomContainer .main .newroom * {
+.userHotelRoomContainer .main .room * {
   font-size: 1.8rem;
   font-weight: bold;
 }
-.userHotelRoomContainer .main .newroom i {
-  font-size: 3rem;
+.userHotelRoomContainer .main .room i {
+  font-size: 1.8rem;
+  margin-right: 1rem;
+}
+.userHotelRoomContainer .main .room .room_link {
+  display: flex;
 }
 .userHotelRoomContainer .main .addLabel {
   display: inline;
@@ -2484,6 +2493,131 @@
   background-color: black;
   color: white;
   transition: linear 0.2s;
+}
+
+.userHotelIndexButtonContainer {
+  position: absolute;
+  top: 15%;
+  right: 0%;
+  width: 100%;
+  height: 85%;
+  display: flex;
+}
+.userHotelIndexButtonContainer .hoteldata {
+  position: absolute;
+  width: 85%;
+  right: 0%;
+  display: flex;
+  flex-direction: column;
+}
+.userHotelIndexButtonContainer .hoteldata .infoSearch {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  margin-left: 13%;
+}
+.userHotelIndexButtonContainer .hoteldata .infoSearch .text2 {
+  margin: 1%;
+  position: relative;
+  color: black;
+  font-weight: bold;
+  font-size: xx-large;
+}
+.userHotelIndexButtonContainer .hoteldata .infoSearch .text3 {
+  position: relative;
+  color: red;
+  font-weight: bold;
+  font-size: xx-large;
+}
+.userHotelIndexButtonContainer .hoteldata .infoSearch .select {
+  height: 1.8rem;
+  width: 4rem;
+  padding: 10px;
+  display: flex;
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  border-radius: 5px;
+  font-weight: bolder;
+  font-size: 1rem;
+}
+.userHotelIndexButtonContainer .hoteldata .infoSearch .search {
+  height: 1.8rem;
+  width: 10rem;
+  padding: 10px;
+  display: flex;
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  border-radius: 5px;
+  font-weight: bolder;
+  font-size: 1rem;
+}
+.userHotelIndexButtonContainer .hoteldata .infoSearch .button {
+  display: inline-flex;
+  align-items: center;
+  margin: 1rem;
+}
+.userHotelIndexButtonContainer .hoteldata .infoSearch i {
+  margin-right: 1rem;
+}
+@media (min-width: 480px) {
+  .userHotelIndexButtonContainer .hoteldata .infoSearch a {
+    width: 90px;
+  }
+}
+@media (min-width: 720px) {
+  .userHotelIndexButtonContainer .hoteldata .infoSearch a {
+    width: 115px;
+  }
+}
+.userHotelIndexButtonContainer .hoteldata .infoSearch a:hover {
+  color: black;
+}
+
+.userHotelIndexTopContainer {
+  background-color: dimgrey;
+  display: flex;
+  position: fixed;
+  width: 100%;
+  align-items: center;
+  height: 15%;
+  padding-right: 3%;
+  padding-left: 3%;
+  padding-top: 0.75rem;
+  z-index: 3;
+}
+.userHotelIndexTopContainer .text {
+  position: relative;
+  color: white;
+  font-weight: bold;
+}
+@media (min-width: 480px) {
+  .userHotelIndexTopContainer .text {
+    font-size: 1.8rem;
+  }
+}
+@media (min-width: 720px) {
+  .userHotelIndexTopContainer .text {
+    font-size: 3rem;
+  }
+}
+@media (min-width: 960px) {
+  .userHotelIndexTopContainer .text {
+    font-size: 3.5rem;
+  }
+}
+.userHotelIndexTopContainer .btn {
+  cursor: pointer;
+}
+.userHotelIndexTopContainer .btn:active {
+  background-color: #d9d9d9;
+  box-shadow: 0 2px #666;
+  transform: translateY(2px);
 }
 
 .userSellIndex_SettingContainer {
