--- a/styles/components/_search-result.scss
+++ b/styles/components/_search-result.scss
@@ -35,7 +35,7 @@
         
     }
 
-    .content{
+    .contents{
 
         padding: $base-padding * 0.8;
         padding-left: $base-padding * 2;
