--- a/styles/components/_userMulti-menu.scss
+++ b/styles/components/_userMulti-menu.scss
@@ -72,5 +72,13 @@
             width: 80px;
         }
     }
+
+    .display {
+        visibility: visible;
+    }
+    .hide {
+        visibility: hidden;
+    }
+    
     
 }
