--- a/styles/layout/_component-style.scss
+++ b/styles/layout/_component-style.scss
@@ -6,6 +6,7 @@
     margin: $base-margin;
     max-height: 40px;
     min-width: 80px;
+    white-space:nowrap;
     text-align: center;
     font-size: $base-font-size;
     background-color: $decorate-color;
