--- a/styles/components/_userhotelindex-section.scss
+++ b/styles/components/_userhotelindex-section.scss
@@ -3,31 +3,22 @@
     
     .hoteldata {
         @include right-block;
-        // position: absolute;
-        // // height:100%;
-        // width:85%;
-        // top: 20%;
-        // z-index: -1;
-        // right: 0%;
-        // z-index: 2;
+        .pagetitle {
+            margin-top: 3%;
+            margin-left: 5%;
+            margin-bottom: 2%;
+            font-size: $font-size-xxl;
+        }
         .infoSearch{
             display: flex;
-            width: 100%;
+            width: 85%;
             align-items: center;
             margin-left: 13%;
-            .text2{
-                margin: 1%;
-                position: relative;
-                color: black;
-                font-weight: bold;
-                font-size: xx-large;
-            }
-        
-            .text3{
-                position: relative;
-                color: red;
-                font-weight: bold;
-                font-size: xx-large;
+            .btn {
+                @include button;
+                // &:hover {
+                //     color: white;
+                // }
             }
         
             .select{
